Sort Kate Session Menu alphabetically

BUG: 364089
REVIEW: 128165