kate/session/katesessionsaction.cpp
@@ -23,6 +23,7 @@
 #include "kateapp.h"
 #include "katesessionmanager.h"
 
+#include <algorithm>
 #include <QMenu>
 
 KateSessionsAction::KateSessionsAction(const QString &text, QObject *parent, KateSessionManager *manager)
@@ -50,7 +51,7 @@ void KateSessionsAction::slotAboutToShow()
     qDeleteAll(sessionsGroup->actions());
 
     KateSessionList slist = m_manager->sessionList();
-    qSort(slist.begin(), slist.end(), KateSession::compareByTimeDesc);
+    std::sort(slist.begin(), slist.end(), KateSession::compareByName);
 
     slist = slist.mid(0, 10); // take first 10
 
